--- a/index.html
+++ b/index.html
@@ -56,8 +56,22 @@
     <p>Customer Service</p>
     <p>Registry</p>
     <p>Gift Cards</p>
+    <p>Sell</p>
 </div>
 
+<div class="header-slider">
+    <a href="#" class="control_previous">&#8592</a>
+    <a href="#" class="control_next">&#8594</a>
+    <ul>
+        <img src="./assets/header1.jpg" class="header-img" alt="">
+        <img src="./assets/header2.jpg" class="header-img" alt="">
+        <img src="./assets/header3.jpg" class="header-img" alt="">
+        <img src="./assets/header4.jpg" class="header-img" alt="">
+        <img src="./assets/header5.jpg" class="header-img" alt="">
+        <img src="./assets/header6.jpg" class="header-img" alt="">
+    </ul>
+</div>
 
+<script src="./script.js"></script>
   </body>
 </html>
