--- a/index.html
+++ b/index.html
@@ -116,19 +116,41 @@
     </div>
 </div>
 
-<div class="product-slider  ">
+<div class="products-slider  ">
     <h2>Best Sellers in Sports & Outdoors</h2>
     <div class="products">
-        <img src="./assets//product1-1.jpg" alt="">
-        <img src="./assets//product1-2.jpg" alt="">
-        <img src="./assets//product1-3.jpg" alt="">
-        <img src="./assets//product1-4.jpg" alt="">
-        <img src="./assets//product1-5.jpg" alt="">
-        <img src="./assets//product1-6.jpg" alt="">
-        <img src="./assets//product1-7.jpg" alt="">
-        <img src="./assets//product1-8.jpg" alt="">
-        <img src="./assets//product1-9.jpg" alt="">
-        <img src="./assets//product1-10.jpg" alt="">
+        <img src="./assets/product1-1.jpg" alt="">
+        <img src="./assets/product1-2.jpg" alt="">
+        <img src="./assets/product1-3.jpg" alt="">
+        <img src="./assets/product1-4.jpg" alt="">
+        <img src="./assets/product1-5.jpg" alt="">
+        <img src="./assets/product1-6.jpg" alt="">
+        <img src="./assets/product1-7.jpg" alt="">
+        <img src="./assets/product1-8.jpg" alt="">
+        <img src="./assets/product1-9.jpg" alt="">
+        <img src="./assets/product1-10.jpg" alt="">
+    </div>
+</div>
+<div class="box-row ">
+    <div class="box-col">
+        <h3>Stationery</h3>
+        <img src="./assets/box3-1.jpg" alt="">
+        <a href="/">Shop More</a>
+    </div>
+    <div class="box-col">
+        <h3>Laptops for study</h3>
+        <img src="./assets/box3-2.jpg" alt="">
+        <a href="/">Shop More</a>
+    </div>
+    <div class="box-col">
+        <h3>Office chairs</h3>
+        <img src="./assets/box3-3.jpg" alt="">
+        <a href="/">Shop More</a>
+    </div>
+    <div class="box-col">
+        <h3>Gaming monitors</h3>
+        <img src="./assets/box3-4.jpg" alt="">
+        <a href="/">Shop More</a>
     </div>
 </div>
 
